force-app/main/default/objects/Applicant__c/fields/Agile_Link__c.field-meta.xml
<CustomField>
    <fullName>Agile_Link__c</fullName>
    <label>Agile Link</label>
    <type>Url</type>
</CustomField>