force-app/main/default/objects/Applicant__c/fields/Git_Github_Link__c.field-meta.xml
<CustomField>
    <fullName>Git_Github_Link__c</fullName>
    <label>Git-Github Link</label>
    <type>Url</type>
</CustomField>