force-app/main/default/objects/Applicant__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <inlineHelpText>Please enter your link using the format https://www.linkedin.com/...</inlineHelpText>
    <label>LinkedIn Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>