force-app/main/default/objects/Applicant__c/fields/Portfolio_Link__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Link__c</fullName>
    <label>Portfolio Link</label>
    <type>Url</type>
</CustomField>