force-app/main/default/objects/Applicant__c/fields/Position_Applied__c.field-meta.xml
<CustomField>
    <fullName>Position_Applied__c</fullName>
    <label>Applied Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>