force-app/main/default/objects/Applicant__c/fields/Salesforce_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Certifications__c</fullName>
    <inlineHelpText>Please select all certifications you received.</inlineHelpText>
    <label>Salesforce Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>AI Associate</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Platform Developer I</fullName>
            </value>
            <value>
                <fullName>Platform App Builder</fullName>
            </value>
            <value>
                <fullName>Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Platform Developer II</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>CPQ Specialist</fullName>
            </value>
            <value>
                <fullName>Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Nonprofit Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Education Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Experience Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Field Service Consultant</fullName>
            </value>
            <value>
                <fullName>Data Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>OmniStudio Consultant</fullName>
            </value>
            <value>
                <fullName>Tableau CRM and Einstein Discovery Consultant</fullName>
            </value>
            <value>
                <fullName>B2C Commerce Developer</fullName>
            </value>
            <value>
                <fullName>Industries CPQ Developer</fullName>
            </value>
            <value>
                <fullName>JavaScript Developer I</fullName>
            </value>
            <value>
                <fullName>OmniStudio Developer</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Administrator</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Developer</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Email Specialist</fullName>
            </value>
            <value>
                <fullName>Pardot Consultant</fullName>
            </value>
            <value>
                <fullName>Pardot Specialist</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>