force-app/main/default/objects/Applicant__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro Meeting</fullName>
            </value>
            <value>
                <fullName>Interview_Required Documents</fullName>
                <label>Interview&amp;Required Documents</label>
            </value>
            <value>
                <fullName>ChangeForce Trailmix</fullName>
            </value>
            <value>
                <fullName>Agile Presentation</fullName>
            </value>
            <value>
                <fullName>Salesforce Portfolio/Resume</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>