force-app/main/default/objects/Applicant__c/fields/Trailhead__c.field-meta.xml
<CustomField>
    <fullName>Trailhead__c</fullName>
    <inlineHelpText>Please enter your link using the format www.salesforce.com/trailblazer/...</inlineHelpText>
    <label>Trailhead Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>