force-app/main/default/objects/Applicant__c/fields/Views_and_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Views_and_Suggestions__c</fullName>
    <label>Views and Suggestions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>