force-app/main/default/objects/Applicant__c/recordTypes/Applicant_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Applicant_Record_Type</fullName>
    <active>true</active>
    <label>Applicant Record Type</label>
</RecordType>