force-app/main/default/objects/Applicant__c/validationRules/StagesShouldBeCompletedInOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>StagesShouldBeCompletedInOrder</fullName>
    <active>true</active>
    <description>All stages in the application process should be completed in an order. You cannot skip a stage without completing it.</description>
    <errorConditionFormula>ISPICKVAL(Stage__c , &apos;ChangeForce Trailmix&apos;)  &amp;&amp;
NOT(ISPICKVAL(PRIORVALUE (Stage__c ),	&apos;Interview&apos;))
||
ISPICKVAL(Stage__c , &apos;Agile Presentation&apos;)  &amp;&amp;
NOT(ISPICKVAL(PRIORVALUE (Stage__c ),	&apos;ChangeForce Trailmix&apos;))
||
ISPICKVAL(Stage__c , &apos;Salesforce Portfolio/Resume&apos;)  &amp;&amp;
NOT(ISPICKVAL(PRIORVALUE (Stage__c ),	&apos;Agile Presentation&apos;))
||
ISPICKVAL(Stage__c , &apos;Completed&apos;)  &amp;&amp;
NOT(ISPICKVAL(PRIORVALUE (Stage__c ),	&apos;Salesforce Portfolio/Resume&apos;))</errorConditionFormula>
    <errorMessage>All stages in the application process should be completed in an order. You cannot skip a stage without completing it.</errorMessage>
</ValidationRule>